--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -22,6 +22,24 @@
 
     </section>
 
+    <section> 
+        <form action="{% url 'userdata' %}" method="post">
+            {% csrf_token %}
+            <p> user </p>
+            {{user}}
+            <button text="submit" > submit </button>
+        </form>
+        <form action=""  method="post"> 
+            {% csrf_token %}
+            <p> profile </p>
+            {{profile}}
+            <button text="submit" > submit </button>
+        </form>
+
+    </section>
+
+    
+
 
     
 </body>
