create table form

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -7,31 +7,15 @@
 </head>
 <body>
     <section style="display: flex;"> 
-        <form>
-
-            <p> user </p>
-            {{user}}
-            <button text="submit" > submit </button>
-        </form>
-
-        <form>
-            <p> profile </p>
-            {{profile}}
-            <button text="submit" > submit </button>
-        </form>
-
-    </section>
-
-    <section> 
         <form action="{% url 'userdata' %}" method="post">
             {% csrf_token %}
-            <p> user </p>
+            <p> User Form </p>
             {{user}}
             <button text="submit" > submit </button>
         </form>
         <form action=""  method="post"> 
             {% csrf_token %}
-            <p> profile </p>
+            <p> Profile Form </p>
             {{profile}}
             <button text="submit" > submit </button>
         </form>
