--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -28,11 +28,25 @@
              <td>no</td>
              <td> name </td>
              <td > email </td>
+             <td> adreess</td>
+             <td> contact </td>
+             <td> quli </td>
+             <td> skills </td>
+             <td> expe </td>
+             <td> other </td>
         </thead>
         {% for i in  %}
         <tr> 
             <td> {{foorloop.counter}}</td>
-            <td> </td>
+            <td> i.name</td>
+            <td> i.email</td>
+            <td> i.address </td>
+            <td> i.contact </td>
+            <td> i.quli</td>
+            <td> i.skills</td>
+            <td> i.expe</td>
+            <td> i.other</td>
+
         </tr>
     </table>
 
